@@ -1,3 +1,8 @@
+2025-10-26  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-add-external-operation): Check
+	`default-directory' if `(car args)' is a relative file name, or nil.
+
 2025-10-25  Stephen Berman  <stephen.berman@gmx.net>
 
 	Fix Tramp support of GVFS built without FUSE
